--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.19.0
   fl_chart: ^0.68.0
-
+  flutter_local_notifications: ^17.2.2
+  timezone: ^0.9.4
+  
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
