--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: finanzadiaria_local
-description: "App local para control de gastos diarios - FinanzaDiaria"
+description: "Control de finanzas personales"
 publish_to: "none"
 
 version: 1.0.0+1
@@ -15,10 +15,11 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   intl: ^0.19.0
+  path_provider: ^2.1.2
   fl_chart: ^0.68.0
   flutter_local_notifications: ^17.2.2
   timezone: ^0.9.4
-  
+
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -27,8 +28,14 @@ dev_dependencies:
 
   hive_generator: ^2.0.1
   build_runner: ^2.4.12
-
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 # android min sdk min is 21
