--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,18 +14,21 @@ dependencies:
   provider: ^6.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  pdf: ^3.10.6
+  printing: ^5.12.0
   intl: ^0.19.0
   path_provider: ^2.1.2
   fl_chart: ^0.68.0
   flutter_local_notifications: ^17.2.2
   timezone: ^0.9.4
+  share_plus: ^10.0.0
 
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  analyzer: ^6.4.1
   hive_generator: ^2.0.1
   build_runner: ^2.4.12
   flutter_lints: ^6.0.0
